# vbd

./: .gitignore  Dockerfile  Makefile  README.md  dev.local.env  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user/docs/: utils.py
user/management/commands/: mock_user.py
user/migrations/: 0001_initial.py
vin_bigdata/: asgi.py  settings.py  urls.py  wsgi.py
